force-app/main/default/objects/Individual_Success_Plan__c/Individual_Success_Plan__c.object-meta.xml
<CustomObject>
    <description>The success plan for a student for student success module.</description>
    <label>Individual Success Plan</label>
    <nameField>
        <label>Individual Success Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Success Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>