force-app/main/default/objects/Individual_Success_Plan__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Individual Success Plans</relationshipLabel>
    <relationshipName>Individual_Success_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>