force-app/main/default/objects/Individual_Success_Plan__c/fields/Individual_Academic_Profile__c.field-meta.xml
<CustomField>
    <fullName>Individual_Academic_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Academic Profile</label>
    <referenceTo>Individual_Academic_Profile__c</referenceTo>
    <relationshipLabel>Individual Success Plans</relationshipLabel>
    <relationshipName>Individual_Success_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>