force-app/main/default/objects/Individual_Success_Plan__c/fields/Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Plan_Summary__c</fullName>
    <label>Plan Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>